--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <div class="container">
   <div class="row max-height align-items-center">
    <div class="col-10 col-md-6 mx-auto text-center">
-    <h1 class=text-uppercase>hex color :<span id="hex-value"></span></h1>
+    <h1 class="text-uppercase">hex color :<span id="hex-value"></span></h1>
     <a href="#" id="btn" class="btn btn-secondary text-uppercase my-2">click me</a>
    </div>
   </div>
